# demos-sched

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CITATION.cff  Makefile  README.md  aarch64.txt  default.nix  demos-sched.files  demos-sched.includes  demos-sched.nix  ev.c  ev.h  ev_epoll.c  init_cgroups.sh  meson.build  meson_aarch64.txt  meson_options.txt  test.nix
.github/workflows/: test.yml
docs/cpufreq latency - coremark/: README.md  cpufreq-trace-report.txt  dataset.csv  fns.ps1  plot.py
docs/cpufreq latency - coremark/1x a53, all other cores disabled/: dataset.csv  fns.ps1  record.fish
docs/cpufreq latency - coremark/1x a53, all other cores disabled/csv/: dataset.csv  fixed_averages.csv
docs/cpufreq latency - coremark/1x a53, demos pinned to another a53/: dataset.csv  fixed_averages.csv  fns.ps1  record.fish
docs/cpufreq latency - coremark/1x a53, demos pinned to another a53/csv/: freqs.csv
docs/cpufreq latency - coremark/1x a72, all other cores disabled/: dataset.csv  fns.ps1  record.fish
docs/cpufreq latency - coremark/1x a72, all other cores disabled/csv/: dataset.csv  fixed_averages.csv  freqs.csv
docs/cpufreq latency - coremark/1x a72, demos pinned to the second a72/: dataset.csv  fixed_averages.csv  fns.ps1  record.fish
docs/cpufreq latency - coremark/4x a53/: README.md  fns.ps1  plot.py  record.fish
docs/cpufreq latency - coremark/4x a53/csv/: dataset.csv  fixed_averages.csv
docs/cpufreq latency - coremark/dataset/alternating01/: 1ms_alternating01_10.out  1ms_alternating01_12.out  1ms_alternating01_13.out  1ms_alternating01_14.out  1ms_alternating01_19.out  1ms_alternating01_21.out  1ms_alternating01_22.out  1ms_alternating01_25.out  1ms_alternating01_26.out  1ms_alternating01_28.out  1ms_alternating01_29.out  1ms_alternating01_3.out  1ms_alternating01_30.out  1ms_alternating01_32.out  1ms_alternating01_33.out  1ms_alternating01_34.out  1ms_alternating01_35.out  1ms_alternating01_36.out  1ms_alternating01_37.out  1ms_alternating01_38.out  1ms_alternating01_39.out  1ms_alternating01_4.out  1ms_alternating01_41.out  1ms_alternating01_45.out  1ms_alternating01_47.out  1ms_alternating01_48.out  1ms_alternating01_49.out  1ms_alternating01_6.out  1ms_alternating01_8.out  1ms_alternating01_9.out
docs/cpufreq latency - coremark/dataset/alternating02/: 1ms_alternating02_0.out  1ms_alternating02_10.out  1ms_alternating02_12.out  1ms_alternating02_18.out  1ms_alternating02_22.out  1ms_alternating02_23.out  1ms_alternating02_26.out  1ms_alternating02_28.out  1ms_alternating02_31.out  1ms_alternating02_35.out  1ms_alternating02_36.out  1ms_alternating02_37.out  1ms_alternating02_39.out  1ms_alternating02_41.out  1ms_alternating02_42.out  1ms_alternating02_43.out  1ms_alternating02_44.out  1ms_alternating02_45.out  1ms_alternating02_48.out  1ms_alternating02_7.out
docs/cpufreq latency - coremark/dataset/alternating03/: 1ms_alternating03_16.out  1ms_alternating03_17.out  1ms_alternating03_21.out  1ms_alternating03_23.out  1ms_alternating03_25.out  1ms_alternating03_30.out  1ms_alternating03_33.out  1ms_alternating03_34.out  1ms_alternating03_35.out  1ms_alternating03_36.out  1ms_alternating03_37.out  1ms_alternating03_38.out  1ms_alternating03_4.out  1ms_alternating03_40.out  1ms_alternating03_44.out  1ms_alternating03_48.out  1ms_alternating03_6.out  1ms_alternating03_8.out  1ms_alternating30_1.out  1ms_alternating30_10.out  1ms_alternating30_11.out  1ms_alternating30_12.out  1ms_alternating30_15.out  1ms_alternating30_16.out  (+13 more)
inc/: ev++.h
include/: Process.h  cgroup.hpp  classes.h  classes.hpp  config_parser.hpp  demos-sch.h  demossched.hpp  freezer.hpp  functions.hpp  majorframe.hpp  partition.hpp  process.hpp  slice.hpp  timerfd.hpp  window.hpp
lib/: demos-sch.c  demos-sch.h  demos-signal-completion.c  meson.build
src/: Makefile  Process.cpp  api_init_test.c  api_test.c  api_test.cpp  cgroup.cpp  cgroup.hpp  cgroup_notif_test.cpp  cgroup_setup.cpp  cgroup_setup.hpp  cgroup_test.cpp  cgroup_test2.cpp  cgrp.cpp  classes.cpp  cleanup_crash.sh  config.cpp  config.hpp  config.yaml  config_parser.cpp  config_parsing.cpp  config_parsing.hpp  config_parsing_test.cpp  cpu_set.hpp  cpufreq_policy.hpp  cpuset.c  demos-sch.c  demos-sch.cpp  demos-sched.cpp  demos_sch.cpp  demos_scheduler.hpp  demos_structures.cpp  demossched.cpp  demossched.hpp  eventfd_test.cpp  evfd.cpp  evfd.hpp  evfd.tests.cpp  file_lib.hpp  freezer.cpp  functions.cpp  (+30 more)
src/lib/: assert.hpp  check_lib.hpp  cpu_set.hpp  cpuset.c  cpuset.h  file_lib.hpp
src/power_policies/: fixed_high.hpp  fixed_low.hpp  min_be.hpp  none.hpp  power_policy.hpp
src/power_policy/: _power_policy.cpp  _power_policy.hpp  bets_hard_throttle.hpp  bets_policy.hpp  bets_skip.hpp  bets_skip.hpp.save  bets_soft_throttle.hpp  fixed_high.hpp  fixed_low.hpp  high.hpp  imx8_alternating.hpp  imx8_fixed.hpp  imx8_per_process.hpp  imx8_per_slice.hpp  low.hpp  min_be.hpp  minbe.hpp  none.hpp  per_process.hpp
src/scratches/: api_usage_example.c  cgroup_notif_test.cpp  cgroup_test.cpp  infinite_proc.c  majorframe_test.cpp  partition.tests.cpp  slice_test.cpp  yaml_demo.cpp
src/tests/: acutest.h  api_init_test.cpp  api_test.c  cpu_stress_test_single.c  dummy.c  meson.build
subprojects/: libev-Add-experimental-support-for-EPOLLPRI-to-the-epoll-b.patch
test/: 0010-help.t  0020-basic.bats  0020-basic.t  0100-api.bats  0100-api.t  0200-config.bats  0200-config.t  0210-config_validation.t  0220-test-configs.bats  0220-test-configs.t  0300-schedule.bats  0300-schedule.t  Makefile  meson.build  tap-functions  test_build.nix  testlib  vm-cgroup-v1.nix  vm-tests.nix  vm.nix
test_config/: CPU_switching.yaml  api_init_test.yaml  api_test-multiple_slices.yaml  api_test.yaml  be_cycle.yaml  be_partition_window_overflow.yaml  be_wait.yaml  config.yaml  environment_test.yaml  init_slice_cpuset_loading.yaml  jitter_process.yaml  more_partitions.yaml  multiple_processes.yaml  per_process_power_policy.yaml  per_process_power_policy2.yaml  per_process_power_policy_tx2.yaml  per_slice_power_policy.yaml
(+695 files in other folders)
